--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       <div class="Intro_End">
         <h1>MAZE PROJECT</h1>
         <p class="Expose">
-          Creating a game in 3D using raycasting.
-          Designed for kids so they can improve their spatial
-          recognition and analytical skills.
+          Creating a maze game.
         </p>
         <p><a href="https://github.com/JoeKAboagye/Maze_project/blob/6e1b8ab80eeccfaf55a7492dee0ed0ae2235c8d2/maze.exe"
           target="_blank" class="For_ALX" id="Play_Game" download>
@@ -37,16 +35,8 @@
             <p>
               For the end of our <a href="https://www.alxafrica.com/" target="_blank" 
               rel="noopener noreferrer" class="For_ALX">ALX/Holberton School</a>
-              foundational trimesters, we had to make our own portfolio project. 
-              What inspired us to work on Maze-Game was learning about game development. 
-              We were curious about game development and<span id="dots">...</span>
-              <span id="more"> wanted to learn new methods and techniques that 
-              can be implemented in software development. 
-              We decided to learn about the Raycasting tool and 
-              implement it using the SDL2 library to make this game. 
-              It is very fascinating to learn how early games, like Wolfenstein 3D, 
-              were able to implement a pseudo-3D visual which revolutionized the gaming industry 
-              and opened up a path to other gaming engines and technologies.</span>
+              foundational trimesters and<span id="dots">...</span>
+              <span id="more"> a learning chance.</span>
             </p>
             <button onclick="myFunction()" id="myBtn">Read more</button>
             <section class="Game_Cntrls">
@@ -80,57 +70,57 @@
           <figure>
             <img src="images/Joe.jpg" alt="Picture of Joseph Aboagye">
             <figcaption class="btn">
-              <h3>Joseph Aboagye, Ghana</h3>
-              Currently working as a teacher at Lead for Ghana (LFG) in Obuasi. <br>
+              <h3>Kelvin Wanjohi, Kenya</h3>
+              Jobless at the moment. <br>
               You can contact him here: 
               <ul class="Explore">
                 <li>
-                  <a href="https://twitter.com/jaboagye2" target="_blank" 
+                  <a href="https://twitter.com/KelvinNyw" target="_blank" 
                   rel="noopener noreferrer">twitter</a>
                 </li>
               </ul> 
               <ul>
                 <li>
-                  <a href="https://web.facebook.com/joseph.aboagye1" 
+                  <a href="https://web.facebook.com/profile.php?id=100081972715320&mibextid=ZbWKwl" 
                   target="_blank" rel="noopener noreferrer">facebook</a>
                 </li>
               </ul>
               <ul>
                 <li>
-                  <a href="https://www.linkedin.com/in/joseph-aboagye-2a3a37130/" 
+                  <a href="https://www.linkedin.com/in/kelvin-nyawira-741a76189/" 
                   target="_blank" rel="noopener noreferrer">linkedIn</a>
                 </li>
               </ul>
               Checkout his 
-              <a href="https://github.com/JoeKAboagye" target="_blank" 
+              <a href="https://github.com/WanjohiK" target="_blank" 
               rel="noopener noreferrer" class="GitHub">GitHub</a> account.
             </figcaption>
           </figure>
           <figure>
-            <img src="images/Topister.jpeg" alt="Picture of Topister Onyango">
+            <img src="images/Topister.jpeg" alt="Picture of Lisette Murugi">
             <figcaption class="btn">
-              <h3>Topister Onyango, Kenya</h3>
-              Currently a student of African Leadership University (ALU), Rwanda. <br>
+              <h3>Lisette Murugi, Kenya</h3>
+              Freelancer, Kenya. <br>
               You can contact her here: 
               <ul>
-                <li><a href="https://twitter.com/Topingstar" target="_blank"
+                <li><a href="https://twitter.com/LisetteNdwiga" target="_blank"
                    rel="noopener noreferrer">twitter</a>
                 </li>
               </ul> 
               <ul>
                 <li>
-                  <a href="https://web.facebook.com/topingstar.bety.90/?_rdc=1&_rdr"
+                  <a href="https://web.facebook.com/lisette.ndwiga?mibextid=ZbWKwl"
                   target="_blank" rel="noopener noreferrer">facebook</a>
                 </li>
               </ul>
               <ul>
                 <li>
-                  <a href="https://www.linkedin.com/in/topister-nandera-5930331a5/" 
+                  <a href="https://www.linkedin.com/in/lisette-ndwiga-a86a75266?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app/" 
                   target="_blank" rel="noopener noreferrer">linkedIn</a>
                 </li>
               </ul>
               Checkout her 
-              <a href="https://github.com/topisteronyango" target="_blank" 
+              <a href="https://github.com/LisetteMurugi" target="_blank" 
               rel="noopener noreferrer" class="GitHub">GitHub</a> account.
             </figcaption>
           </figure>
@@ -142,13 +132,13 @@
       <!-- Ending -->
       <div class="Intro_End Text-Content">
         <div class="Links">
-          <p>Link to the <a href="https://github.com/JoeKAboagye/Maze_project">
+          <p>Link to the <a href="https://github.com/WanjohiK/the_maze_project">
             project's GitHub repository.</a>
           </p>
-          <p>You can <a href="mailto:josephkwabenaaboagye@gmail.com">email us here</a></p>
+          <p>You can <a href="mailto:kelvinnyawira2022@gmail.com">email us here</a></p>
           <p>
-            &copy; 2022, <a href="tel:+233248166114">
-            Joseph Kwabena Aboagye</a>
+            &copy; 2022, <a href="tel:+254708555370">
+            Kelvin Wanjohi Nyawira</a>
           </p>
         </div>
       </div>
