--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <section>
             <p>
               For the end of our <a href="https://www.alxafrica.com/" target="_blank" 
-              rel="noopener noreferrer" class="For_ALX">ALX/Holberton School</a>
+              rel="noopener noreferrer" class="For_ALX">ALX/Africa</a>
               foundational trimesters and<span id="dots">...</span>
               <span id="more"> a learning chance.</span>
             </p>
