--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p class="Expose">
           Creating a maze game.
         </p>
-        <p><a href="https://github.com/JoeKAboagye/Maze_project/blob/6e1b8ab80eeccfaf55a7492dee0ed0ae2235c8d2/maze.exe"
+        <p><a href="https://github.com/WanjohiK/the_maze_project/blob/main/maze.exe"
           target="_blank" class="For_ALX" id="Play_Game" download>
           Download and try the game on Windows</a>
         </p>
@@ -56,7 +56,7 @@
                     </li>
                     <li>T -- Change Texture of walls and square columns</li>
                   </ul>
-                  <a href="https://github.com/JoeKAboagye/Maze_project/blob/6e1b8ab80eeccfaf55a7492dee0ed0ae2235c8d2/maze.exe" 
+                  <a href="https://github.com/WanjohiK/the_maze_project/blob/main/maze.exe" 
                   class="Play" download>Download and Play</a>
                 </div>
               </p>
@@ -68,7 +68,7 @@
         <h2>MEET THE DEVELOPER TEAM</h2>
         <div class="Dev-Profile">
           <figure>
-            <img src="images/Joe.jpg" alt="Picture of Joseph Aboagye">
+            <img src="images/Kelvin.jpg" alt="Picture of Kelvin Wanjohi">
             <figcaption class="btn">
               <h3>Kelvin Wanjohi, Kenya</h3>
               Jobless at the moment. <br>
@@ -97,7 +97,7 @@
             </figcaption>
           </figure>
           <figure>
-            <img src="images/Topister.jpeg" alt="Picture of Lisette Murugi">
+            <img src="images/Lisette.jpeg" alt="Picture of Lisette Murugi">
             <figcaption class="btn">
               <h3>Lisette Murugi, Kenya</h3>
               Freelancer, Kenya. <br>
@@ -143,6 +143,6 @@
         </div>
       </div>
     </footer>
-    <script src="JS/MoreText.js"></script>
+    <script src="javas/MoreText.js"></script>
   </body>
 </html>
